Add SurveyEditionTest